[gd_scene load_steps=20 format=3 uid="uid://clad71x6nip3w"]

[ext_resource type="Script" path="res://scripts/game_level.gd" id="1_kgqy7"]
[ext_resource type="PackedScene" uid="uid://53o2o6sef8fm" path="res://scenes/game_manager.tscn" id="2_pl2ao"]
[ext_resource type="Texture2D" uid="uid://c8arnlq67qi7" path="res://assets/third_person_controller_assets-main/textures/grids/Dark/texture_05.png" id="3_dbp7b"]
[ext_resource type="Material" uid="uid://cqmfgyapl3iyx" path="res://materials/brick_mat.tres" id="4_jyib5"]
[ext_resource type="PackedScene" uid="uid://bqrn1mssks6mm" path="res://scenes/testing/zombie_holder.tscn" id="5_xrum5"]
[ext_resource type="PackedScene" uid="uid://cqkrsucbenoss" path="res://scenes/enemies/zombie.tscn" id="6_hpolm"]
[ext_resource type="PackedScene" uid="uid://cwp0spuqeu7jj" path="res://scenes/scenery/watering_bush.tscn" id="14_itv31"]
[ext_resource type="PackedScene" uid="uid://dsxmj3jw6gqcd" path="res://scenes/shops/shop_revolver.tscn" id="14_kycbe"]
[ext_resource type="PackedScene" uid="uid://c0j4glofdqgpk" path="res://scenes/shops/fruit_punch_bowl.tscn" id="15_vspmv"]
[ext_resource type="PackedScene" uid="uid://22lknia5oy4" path="res://scenes/shops/shop_saw.tscn" id="16_5epp3"]
[ext_resource type="PackedScene" uid="uid://c7baeq2p0p2hk" path="res://scenes/shops/shop_m4.tscn" id="17_b5imc"]
[ext_resource type="PackedScene" uid="uid://ddgpevn3nkya1" path="res://scenes/shops/shop_benelli.tscn" id="18_rw0w1"]
[ext_resource type="PackedScene" uid="uid://buup8044hp4ox" path="res://scenes/shops/shop_mpx.tscn" id="19_a8gam"]
[ext_resource type="PackedScene" uid="uid://d4jtl2hk346is" path="res://scenes/shops/ammo_box.tscn" id="20_ou4ey"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_27m1f"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_mdijn"]
sky_material = SubResource("ProceduralSkyMaterial_27m1f")

[sub_resource type="Environment" id="Environment_112m7"]
background_mode = 2
sky = SubResource("Sky_mdijn")
ambient_light_color = Color(0.964742, 0.964742, 0.964742, 1)
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.307284, 0.335232, 0.379163, 1)
fog_light_energy = 0.1
fog_density = 0.002

[sub_resource type="NavigationMesh" id="NavigationMesh_7od6u"]
vertices = PackedVector3Array(-499.5, 0.4, -13.25, -17.25, 0.4, -13.25, -17.25, 0.4, -15, -16.25, 0.4, -15.25, -16.25, 0.4, -499.5, -499.5, 0.4, -499.5, -10.5, 0.65, -5, -6.75, 0.4, -2.75, -5.5, 0.4, -2.5, -10.5, 0.65, -8, -15.5, 0.4, -11.75, -12, 0.4, -8.25, -15.5, 0.4, -15, -5.5, 0.4, -0.75, 499.5, 0.4, -0.75, 499.5, 0.4, -499.5, -7.25, 0.4, -2.5, -10.75, 0.4, -4.5, -17, 0.4, -11.5, -12.25, 0.4, -4.75, -7.25, 0.4, 1, -6.25, 0.4, 1.25, -499.5, 0.4, 499.5, -6.25, 0.4, 499.5, -5.5, 0.4, 1, 499.5, 0.4, 499.5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 4), PackedInt32Array(4, 0, 5), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(11, 10, 9), PackedInt32Array(9, 10, 12), PackedInt32Array(12, 3, 4), PackedInt32Array(14, 13, 8), PackedInt32Array(9, 12, 8), PackedInt32Array(8, 12, 4), PackedInt32Array(8, 4, 14), PackedInt32Array(14, 4, 15), PackedInt32Array(17, 6, 16), PackedInt32Array(16, 6, 7), PackedInt32Array(0, 1, 18), PackedInt32Array(17, 16, 19), PackedInt32Array(19, 16, 20), PackedInt32Array(19, 20, 0), PackedInt32Array(18, 10, 11), PackedInt32Array(20, 21, 0), PackedInt32Array(0, 21, 23), PackedInt32Array(0, 23, 22), PackedInt32Array(11, 19, 18), PackedInt32Array(18, 19, 0), PackedInt32Array(21, 24, 23), PackedInt32Array(23, 24, 25), PackedInt32Array(25, 24, 14), PackedInt32Array(24, 13, 14)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gvvsr"]
albedo_texture = ExtResource("3_dbp7b")
uv1_triplanar = true

[node name="world" type="Node3D"]
script = ExtResource("1_kgqy7")
spawn_objectives = false

[node name="GameManager" parent="." instance=ExtResource("2_pl2ao")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_112m7")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_7od6u")

[node name="map" type="Node3D" parent="NavigationRegion3D"]

[node name="floor" type="CSGBox3D" parent="NavigationRegion3D/map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
material_override = SubResource("StandardMaterial3D_gvvsr")
use_collision = true
collision_layer = 2
collision_mask = 3
size = Vector3(1000, 1, 1000)

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="NavigationRegion3D/map/floor"]
size = Vector3(500, 1, 500)

[node name="wall14" type="CSGBox3D" parent="NavigationRegion3D/map"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, -0.276806, 0.123798, -9.20487)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.499939, 0.5, 19.6202)

[node name="wall15" type="CSGBox3D" parent="NavigationRegion3D/map"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, -5.05423, -0.0784907, -12.79)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.15, 0.1, 22.45)

[node name="wall16" type="CSGBox3D" parent="NavigationRegion3D/map"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, -10, -0.078, -12.015)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.15, 0.1, 24)

[node name="wall17" type="CSGBox3D" parent="NavigationRegion3D/map"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, -15, -0.078, -12.015)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.15, 0.1, 24)

[node name="ZombieHolder" type="Node3D" parent="NavigationRegion3D/map"]
transform = Transform3D(1, 1.45519e-11, -5.82077e-11, -1.40972e-11, 1, -1.74623e-10, 5.82077e-11, -1.74623e-10, 1, -5.00001, 0.0790085, -0.775033)

[node name="wall15" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, 0.267727, -2.57748e-06, -1.1706e-05)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.5, 0.4, 2.55)

[node name="wall19" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, 1.86349, -0.000234597, -0.00106546)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.5, 0.4, 2.55)

[node name="wall22" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(1, 0.00014497, 0.000660431, -0.000145397, 1, 0.000631206, -0.000660342, -0.000631304, 1, 3.44363, -0.000464344, -0.00210889)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.5, 0.4, 2.55)

[node name="wall16" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, -0.521406, 0.000166349, -1.01492)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.55, 0.4, 1.1)

[node name="wall20" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, 1.05986, 0.00116445, -1.01596)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.55, 0.4, 1.1)

[node name="wall24" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, 2.65325, 0.00217021, -1.01702)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.55, 0.4, 1.1)

[node name="wall17" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, -0.520763, 0.000308104, 1.01008)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.5, 0.4, 1.1)

[node name="wall21" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, 1.07419, 0.00131485, 1.00903)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.5, 0.4, 1.1)

[node name="wall23" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, 2.65733, 0.00231414, 1.00798)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(0.5, 0.4, 1.1)

[node name="wall18" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, -1.32122, 0.80013, 0.0351623)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(2.55, 2, 0.5)

[node name="wall25" type="CSGBox3D" parent="NavigationRegion3D/map/ZombieHolder"]
transform = Transform3D(-0.000660386, -0.000631304, 1, -0.000145397, 1, 0.000631206, -1, -0.00014497, -0.000660475, 1.87086, 0.802137, -0.021666)
material_override = ExtResource("4_jyib5")
use_collision = true
collision_mask = 3
size = Vector3(2.55, 2, 0.5)

[node name="ZombieHolder2" parent="NavigationRegion3D/map" instance=ExtResource("5_xrum5")]
transform = Transform3D(1, 1.45519e-11, -5.82077e-11, -1.40972e-11, 1, -1.74623e-10, 5.82077e-11, -1.74623e-10, 1, -10, 0.079, -6.5)

[node name="ZombieHolder3" parent="NavigationRegion3D/map" instance=ExtResource("5_xrum5")]
transform = Transform3D(1, 1.45519e-11, -5.82077e-11, -1.40972e-11, 1, -1.74623e-10, 5.82077e-11, -1.74623e-10, 1, -14.95, 0.079, -13.45)

[node name="FruitPunchBowl" parent="." instance=ExtResource("15_vspmv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.75074, -0.0999999, -7.28617)
item_cost = 10

[node name="ShopLMG" parent="." instance=ExtResource("16_5epp3")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.7, 0, -1.7)
item_cost = 0

[node name="ShopRifle" parent="." instance=ExtResource("17_b5imc")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.7, 0, -3.90411)
item_cost = 0

[node name="ShopShotgun" parent="." instance=ExtResource("18_rw0w1")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.7, 0, -6.36613)
item_cost = 0

[node name="ShopSMG" parent="." instance=ExtResource("19_a8gam")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.7, 0, -8.41712)
item_cost = 0

[node name="AmmoBox" parent="." instance=ExtResource("20_ou4ey")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.46286, 0, -1.2695)
ammo_cost = 0
cooldown = 1

[node name="AmmoBox2" parent="." instance=ExtResource("20_ou4ey")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.46286, 0, -6.8695)
ammo_cost = 0
cooldown = 1

[node name="AmmoBox3" parent="." instance=ExtResource("20_ou4ey")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.46286, 0, -13.1695)
ammo_cost = 0
cooldown = 1

[node name="PlayerSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51931, 0, -8.94537)

[node name="Zombie" parent="." instance=ExtResource("6_hpolm")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -5.9, -0.1, -0.7)
starting_health = 100000

[node name="Zombie4" parent="." instance=ExtResource("6_hpolm")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -4.312, -0.1, -0.7)
starting_health = 100000

[node name="Zombie5" parent="." instance=ExtResource("6_hpolm")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -2.69883, -0.1, -0.7)
starting_health = 100000

[node name="Zombie2" parent="." instance=ExtResource("6_hpolm")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -10.85, -0.1, -6.5)
starting_health = 100000

[node name="Zombie3" parent="." instance=ExtResource("6_hpolm")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -15.85, -0.1, -13.45)
starting_health = 100000

[node name="WateringBush" parent="." instance=ExtResource("14_itv31")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.2, -0.1, -13.1)
max_water = 10.0

[node name="WateringBush2" parent="." instance=ExtResource("14_itv31")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.2, -0.1, -16)
id = 1
max_water = 10.0

[node name="WateringBush3" parent="." instance=ExtResource("14_itv31")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.2, -0.1, -19.1)
id = 2
max_water = 10.0

[node name="ShopRevolver" parent="." instance=ExtResource("14_kycbe")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 4.63386, -0.1, -10.6274)
item_cost = 0
